APB-109 bugfix css mobile app1 start page, usermenu dropdown equal space around it, app2 settings icon moved to bottom and adjustments toolbars, theme 3 renamed to caffè latte, search center aligned, user_account hover replaced with js so search is hidden, added copright texts to all apps, included search and user_account in app3, bugfix get_info links

--- a/apps/app1/css/app.css
+++ b/apps/app1/css/app.css
@@ -62,7 +62,7 @@ body.font_arabic_nastaliq #dialogue_info_content{
 #dialogue_start_content{
 	visibility:visible;
 	overflow: hidden;
-	height: 380px;
+	height: 420px;
 	transform:             rotateY( 0deg );
         -moz-transform:    rotateY( 0deg );
         -ms-transform:     rotateY( 0deg );
@@ -149,9 +149,6 @@ body.font_arabic_nastaliq #dialogue_info_content{
 .app_url{
 	display:none;
 }
-#start_message{
-	margin-top: 30px;
-}
 #start_links, #contact, #copyright{
 	display: block;
 	font-size: 11px;
@@ -164,7 +161,7 @@ body.font_arabic_nastaliq #dialogue_info_content{
 /*DIALOGUE INFO*/
 #dialogue_info_content{
 	visibility:visible;
-	height: 380px;
+	height: 420px;
 	transform:             rotateY( 180deg );
         -moz-transform:    rotateY( 180deg );
         -ms-transform:     rotateY( 180deg );
